# system_for_university

./: .env.example  .gitignore  Makefile  README.md  db_commands.py  docker-compose.yml  loggin.conf  main.py  pyproject.toml  query_for_task.sql  tables.sql
courses/: db_commands.py  router.py  schemas.py
data/: config.py  db_config.py
docker/: app.sh
grades/: db_commands.py  router.py  schemas.py
students/: db_commands.py  router.py  schemas.py
teachers/: db_commands.py  router.py  schemas.py
